# STChatbot

./: .gitignore  README.md  package-lock.json  poetry env  readme.md  taskfile.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh
backend/: README.md  app.py  db.py  llm.py  main.py  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Admin.tsx  App.tsx  Login.tsx  Nav.tsx  Register.tsx  UpdateUser.tsx  gpt.tsx
