[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SilasBach <79838393+SilasBach@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.4"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
